[tool.poetry]
name = "py-tdd-reporting"
version = "0.1.0"
description = ""
authors = ["Eric Bustamante <ericnorberto@gmail.com>"]
readme = "README.md"
packages = [{include = "py_tdd_reporting"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
